# llama3_jax

./: .gitignore  Makefile  README.md  pyproject.toml
src/llama3_jax/: train.py
src/llama3_jax/blocks/: attention.py  feed_forward.py  transformer.py
src/llama3_jax/configs/: train.yaml
src/llama3_jax/configs/model/: default.yaml
src/llama3_jax/data/: batching.py  tokenizing.py
src/llama3_jax/utils/: forward.py  loss.py  mathematics.py  update.py  weights.py
