[project]
name = "llama3-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "hydra-core>=1.3.2",
  "jax>=0.5.0",
  "jaxlib>=0.5.0",
  "rich>=13.9.4",
]

[tool.uv]
package = true # This makes uv automatically add deepchain_mrna to PYTHONPATH
